Fix: bug fix on tablet responsivness

--- a/css/style.css
+++ b/css/style.css
@@ -106,61 +106,6 @@ body{
     }
 }
 
-@media (min-width: 768px) and (max-width: 991.98px) {
-    .hero__section {
-        margin-top: -150px;
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-    .hero__text{
-        font-size: 1.8rem;
-    }
-    .hero__img{
-        width: 250px;
-    }
-    .dot__img2, .dot__img1{
-        width: 150px;
-    }
-    .dot__img2{
-        margin-top: -150px;
-    }
-    .media{
-        display: inline-flex;
-    }
-    .nav__vector{
-        width: 150px;
-    }
-    .form__title {
-        font-size: 1.6rem;
-    }
-    .form__input{
-        width: 400px;
-    }
-    .form__btn, .form__btn:hover{
-        padding: 13px 20px 13px 20px;
-    }
-    .hwiw__title{
-        font-size: 5.5rem;
-        line-height: 120px !important;
-    }
-    .hwiw__section {
-        padding-left: 50px !important;
-        padding-right: 50px !important;
-    }
-    .footer_form__section {
-        margin-top: 80px !important;
-        padding-top: 60px !important;
-        padding-bottom: 60px !important;
-    }
-    .ff__input{
-        width: 400px !important;
-    }
-    .ff__btn{
-        padding: 13px 20px 13px 20px !important;
-    }
-}
-
-
 @media (max-width: 576px) {
     .hero__section{
         width: 100%;
@@ -355,5 +300,64 @@ body{
     .footer{
         padding: 30px 100px 30px 100px;
         
+    }
+}
+
+
+/* Tablet view */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .hero__section {
+        margin-top: -150px;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    .hero__text{
+        font-size: 1.8rem;
+    }
+    .hero__img{
+        width: 250px;
+    }
+    .dot__img2, .dot__img1{
+        width: 150px;
+    }
+    .dot__img2{
+        margin-top: -150px;
+    }
+    .media{
+        display: inline-flex;
+    }
+    .nav__vector{
+        width: 150px;
+    }
+    .form__title {
+        font-size: 1.6rem;
+    }
+    .form__input{
+        width: 400px;
+    }
+    .form__btn, .form__btn:hover{
+        padding: 13px 20px 13px 20px;
+    }
+    .hwiw__title{
+        font-size: 5.5rem;
+        line-height: 120px !important;
+    }
+    .hwiw__section {
+        padding-left: 50px !important;
+        padding-right: 50px !important;
+    }
+    .footer_form__section {
+        margin-top: 80px !important;
+        padding-top: 60px !important;
+        padding-bottom: 60px !important;
+    }
+    .ff__input{
+        width: 400px !important;
+    }
+    .ff__btn{
+        padding: 13px 20px 13px 20px !important;
+    }
+    .footer{
+        padding: 15px 50px 15px 50px !important;
     }
 }
